Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-148

SEGV trying to access a tablet which is bootstrapping

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • M4
    • None
    • tserver
    • None

    Description

      If you try to scan or write to a tablet while it's still in the process of bootstrapping, you get a SEGV since it tries to access the NULL tablet.

      Along with fixing this we should probably make the TSTabletManasger APIs more obvious so anywhere that we try to access a peer's tablet gets the appropriate checks.

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: